# RPi-Pico-FreeRTOS-Template

./: CMakeLists.txt  README.md
FreeRTOS-Kernel/include/: FreeRTOS.h  croutine.h  event_groups.h  mpu_prototypes.h  mpu_wrappers.h  newlib-freertos.h  picolibc-freertos.h  portable.h  queue.h  semphr.h  stack_macros.h  task.h  timers.h
FreeRTOS-Kernel/portable/: CMakeLists.txt
FreeRTOS-Kernel/portable/GCC/ARM_CM0/: port.c  portmacro.h
FreeRTOS-Kernel/portable/MemMang/: heap_2.c  heap_4.c  heap_5.c
src/: main.cpp
